# pw9

OneDrive/Робочий стіл/List-and-test/: .gitignore
OneDrive/Робочий стіл/List-and-test/list/: list.hpp
OneDrive/Робочий стіл/Trubchaninov_Zakharenko/: main.cpp
OneDrive/Робочий стіл/tic_tac_toe/: CMakeLists.txt
OneDrive/Робочий стіл/tic_tac_toe/.github/workflows/: ci-configuration.yml
OneDrive/Робочий стіл/tic_tac_toe/include/: board.hpp  game.hpp  moves.hpp  tictactoe.hpp
OneDrive/Робочий стіл/tic_tac_toe/lib/src/: board.cpp  game.cpp  main.cpp  moves.cpp
OneDrive/Робочий стіл/tic_tac_toe/src/: board.cpp  game.cpp  main.cpp  moves.cpp
